--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
             <img src="./imagens/cactosBig.png" alt="Tres cactos">
         </div>
 
+        <div id ="passaro">
+            <img src="./imagens/passaro.png" alt="passaro">
+        </div>
+
+        <div id ="terra">
+            <img src = "imagens/chao.png" alt="terra">
+        </div>
+
+        <div id="ceu">
+            <img src ="imagens/nuvem.jpg" alt="ceu">
+        </div>
+        <div id="score">Score <b>00</b></div>
+        <div id="gameOver">Game Over</div>
+
+
+
     </div>    
     <script src="./game.js"></script>
 </body>
