--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Dino Game!!</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="./game.js"></script>
 </head>
 <body>
     <div id ="container">
@@ -31,9 +32,6 @@
         <div id="score">Score <b>00</b></div>
         <div id="gameOver">Game Over</div>
 
-
-
     </div>    
-    <script src="./game.js"></script>
 </body>
 </html>
